--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open-Sans';
   src: url("../fonts/KFOmCnqEu92Fr1Mu4mxK.ttf") format(ttf); }
 
-header .common_menu .left_menu .additional_tab .logo, header .common_menu .left_menu .additional_tab .showcase, header .common_menu .left_menu .static-menu__text {
+.common-header .common_menu .left_menu .additional_tab .logo, .common-header .common_menu .left_menu .additional_tab .showcase, .common-header .common_menu .left_menu .static-menu__text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -74,44 +74,44 @@ header .common_menu .left_menu .additional_tab .logo, header .common_menu .left_
 body {
   background: #1C1C1E; }
 
-header {
+.common-header {
   width: 100%;
   height: 37px;
   background: black; }
-  header .common_menu {
+  .common-header .common_menu {
     padding: 0 10px;
     height: 100%; }
-    header .common_menu .left_menu {
+    .common-header .common_menu .left_menu {
       font-family: Arial, Helvetica, sans-serif;
       height: 100%;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex; }
-      header .common_menu .left_menu .additional_tab {
+      .common-header .common_menu .left_menu .additional_tab {
         height: 100%;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex; }
-        header .common_menu .left_menu .additional_tab .logo {
+        .common-header .common_menu .left_menu .additional_tab .logo {
           height: 100%;
           margin-right: 18px; }
-          header .common_menu .left_menu .additional_tab .logo__item {
+          .common-header .common_menu .left_menu .additional_tab .logo__item {
             background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
             background-position: 0% 1660px;
             display: block;
             height: 15px;
             width: 70px;
             opacity: .6; }
-          header .common_menu .left_menu .additional_tab .logo:hover .logo__item {
+          .common-header .common_menu .left_menu .additional_tab .logo:hover .logo__item {
             opacity: .9; }
-        header .common_menu .left_menu .additional_tab .showcase {
+        .common-header .common_menu .left_menu .additional_tab .showcase {
           margin-right: 18px;
           cursor: pointer; }
-          header .common_menu .left_menu .additional_tab .showcase__text {
+          .common-header .common_menu .left_menu .additional_tab .showcase__text {
             font-size: 13px;
             color: #e5e5e5;
             opacity: .6; }
-          header .common_menu .left_menu .additional_tab .showcase__check-mark {
+          .common-header .common_menu .left_menu .additional_tab .showcase__check-mark {
             background: url("https://cdn-cm.gcdn.co/img/main_sprite_1.1.16.svg");
             background-position: 0 -570px;
             opacity: .6;
@@ -119,32 +119,32 @@ header {
             height: 4px;
             margin-left: 7px;
             margin-top: 3px; }
-          header .common_menu .left_menu .additional_tab .showcase .rotate {
+          .common-header .common_menu .left_menu .additional_tab .showcase .rotate {
             -webkit-transform: rotate(180deg);
             -ms-transform: rotate(180deg);
             transform: rotate(180deg); }
-          header .common_menu .left_menu .additional_tab .showcase:hover .showcase__text {
+          .common-header .common_menu .left_menu .additional_tab .showcase:hover .showcase__text {
             -webkit-transition: opacity ease-in-out 0.07s;
             -o-transition: opacity ease-in-out 0.07s;
             transition: opacity ease-in-out 0.07s;
             opacity: .9; }
-          header .common_menu .left_menu .additional_tab .showcase:hover .showcase__check-mark {
+          .common-header .common_menu .left_menu .additional_tab .showcase:hover .showcase__check-mark {
             -webkit-transition: opacity ease-in-out 0.07s;
             -o-transition: opacity ease-in-out 0.07s;
             transition: opacity ease-in-out 0.07s;
             opacity: .9; }
-      header .common_menu .left_menu .static-menu {
+      .common-header .common_menu .left_menu .static-menu {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex; }
-        header .common_menu .left_menu .static-menu__text {
+        .common-header .common_menu .left_menu .static-menu__text {
           height: 100%;
           color: #ffbe4c;
           opacity: .6;
           margin-right: 18px; }
-        header .common_menu .left_menu .static-menu__text:nth-child(2) {
+        .common-header .common_menu .left_menu .static-menu__text:nth-child(2) {
           color: #e5e5e5; }
-        header .common_menu .left_menu .static-menu__text:hover {
+        .common-header .common_menu .left_menu .static-menu__text:hover {
           -webkit-transition: opacity ease-in-out 0.07s;
           -o-transition: opacity ease-in-out 0.07s;
           transition: opacity ease-in-out 0.07s;
@@ -665,6 +665,8 @@ header {
     z-index: 50;
     width: 986px; }
     .main-heading .carousel-store .slider-store .slider-block {
+      position: relative;
+      overflow: hidden;
       width: 986px;
       height: 200px; }
       .main-heading .carousel-store .slider-store .slider-block__arrows-one, .main-heading .carousel-store .slider-store .slider-block__arrows-two {
@@ -828,3 +830,118 @@ header {
           opacity: 0; }
         .main-heading .carousel-store .block-store .link-store .premium-store:hover:after {
           opacity: 1; }
+
+.latest-news {
+  font-family: Arial, Helvetica, sans-serif; }
+  .latest-news .central-columns {
+    width: 1330px;
+    margin: 0 auto; }
+    .latest-news .central-columns .columns-header {
+      margin: 50px 0 25px 0; }
+      .latest-news .central-columns .columns-header__title {
+        text-transform: uppercase;
+        line-height: 21px;
+        font-weight: 700;
+        color: #e9e2bf;
+        font-size: 22px; }
+    .latest-news .central-columns .flex-blcks {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      .latest-news .central-columns .flex-blcks .three-columns {
+        padding-right: 20px; }
+        .latest-news .central-columns .flex-blcks .three-columns:nth-child(1), .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) {
+          border-right: 1px solid rgba(233, 226, 191, 0.15); }
+        .latest-news .central-columns .flex-blcks .three-columns:nth-child(2), .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) {
+          padding: 0 20px; }
+          .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news {
+            margin-bottom: 40px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex; }
+            .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-link, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-link {
+              position: relative;
+              margin-right: 20px;
+              width: 191px;
+              height: 107px; }
+              .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-link__img, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-link__img {
+                background: url(../images/news-img/20.05.14_10ani_act_2_1_1.jpg) center/contain no-repeat;
+                width: 191px;
+                height: 107px; }
+              .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-link__img::before, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-link__img::before {
+                display: none; }
+            .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-info, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-info {
+              background: initial;
+              width: 200px;
+              padding: 0; }
+              .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-info .text-news__text, .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-info .text-news__text {
+                margin-bottom: 0;
+                line-height: 22px;
+                font-size: 17px; }
+              .latest-news .central-columns .flex-blcks .three-columns:nth-child(2) .small-news .news-info .text-news__text:nth-child(2), .latest-news .central-columns .flex-blcks .three-columns:nth-child(3) .small-news .news-info .text-news__text:nth-child(2) {
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 16px;
+                margin: 8px 0 5px; }
+        .latest-news .central-columns .flex-blcks .three-columns .small-news {
+          width: 416px; }
+          .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link {
+            position: relative;
+            overflow: hidden;
+            display: block;
+            width: 100%;
+            height: 234px; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link__img {
+              background: url(../images/news-img/mortal-race-4.jpg) center/contain no-repeat;
+              -webkit-transition: all .5s;
+              -o-transition: all .5s;
+              transition: all .5s;
+              display: block;
+              width: 100%;
+              height: 234px; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link__img::before {
+              background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, transparent), to(#0e0e0f));
+              background-image: -webkit-linear-gradient(top, transparent 50%, #0e0e0f 100%);
+              background-image: -o-linear-gradient(top, transparent 50%, #0e0e0f 100%);
+              background-image: linear-gradient(to bottom, transparent 50%, #0e0e0f 100%);
+              position: absolute;
+              left: 0;
+              right: 0;
+              top: 0;
+              bottom: 0;
+              content: ""; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link__img::after {
+              background-color: rgba(14, 14, 15, 0.5);
+              -webkit-transition: opacity .5s;
+              -o-transition: opacity .5s;
+              transition: opacity .5s;
+              position: absolute;
+              opacity: 0;
+              left: 0;
+              right: 0;
+              top: 0;
+              bottom: 0;
+              content: ""; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link:hover .news-link__img::after {
+              opacity: 1; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-link:hover .news-link__img {
+              -webkit-transform: scale(1.1);
+              -ms-transform: scale(1.1);
+              transform: scale(1.1); }
+          .latest-news .central-columns .flex-blcks .three-columns .small-news .news-info {
+            padding: 0 32px 27px;
+            background: #0E0E0F; }
+            .latest-news .central-columns .flex-blcks .three-columns .small-news .news-info .text-news {
+              display: block; }
+              .latest-news .central-columns .flex-blcks .three-columns .small-news .news-info .text-news__text {
+                margin-bottom: 12px;
+                line-height: 34px;
+                font-weight: 600;
+                color: #e9e2bf;
+                font-size: 24px;
+                display: block; }
+              .latest-news .central-columns .flex-blcks .three-columns .small-news .news-info .text-news__text:nth-child(2) {
+                margin: 11px 0 10px;
+                line-height: 18px;
+                color: #7c7967;
+                font-size: 15px; }
