--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -884,6 +884,14 @@ body {
                             display: block;
                             width: 100%;
                             height: 234px;
+                            .news-link-shadow {
+                                background-color: rgba(14, 14, 15, 0.5);
+                                transition: opacity .5s;
+                                display: block;
+                                width: 100%;
+                                height: 100%;
+                                opacity: 0;
+                            }
                         }
                         &__img::before {
                             background-image: linear-gradient(to bottom,transparent 50%,#0e0e0f 100%);
@@ -893,20 +901,6 @@ body {
                             top: 0;
                             bottom: 0;
                             content: "";
-                        }
-                        &__img::after {
-                            background-color: rgba(14,14,15,.5);
-                            transition: opacity .5s;
-                            position: absolute;
-                            opacity: 0;
-                            left: 0;
-                            right: 0;
-                            top: 0;
-                            bottom: 0;
-                            content: "";
-                        }
-                        &:hover .news-link__img::after  {
-                            opacity: 1;
                         }
                     }
                     .news-info {
@@ -931,6 +925,50 @@ body {
                         }
                     }
                 }
+            }
+        }
+    }
+}
+.footer-wrap {
+    background: black;
+    .footer-center {
+        border-bottom: 1px solid #282828;
+        border-top: 1px solid #282828;
+        width: 1330px;
+        margin: 0 auto;
+        .footer-list {
+            padding: 15px 0;
+            .footer-logo {
+                background: url(../images/footer-logo/footer-logo.png) center/cover;
+                margin-right: 17%;
+                width: 101px;
+                height: 54px;
+                float: left;
+            }
+            .footer-menu {
+                column-count: 3;
+                .footer-menu_item {
+                    margin-bottom: 10px;
+                    &__text {
+                        font-family: Arial, Helvetica, sans-serif;
+                        text-transform: uppercase;
+                        color: #fffbed;
+                        font-size: 11px;
+                    }
+                }
+            }
+        }
+    }
+    .rights-reserved {
+        font-family: Arial, Helvetica, sans-serif;
+        line-height: 18px;
+        color: #474747;
+        padding: 15px 0;
+        margin: 0 auto;
+        width: 600px;
+        .footer-cop {
+            &__link {
+                color: #dad7d6;
             }
         }
     }
